--- a/src/pages/articles/four-weddings.mdx
+++ b/src/pages/articles/four-weddings.mdx
@@ -44,7 +44,7 @@ Before we get into the competition aspect of the show, I'd like to start with so
 
 As you can see, brides in most states were not represented in the show. Of the states that made an appearance, New York and Florida are by far the most frequent destinations; these two states alone account for nearly 42% of the weddings in the data set. On the other end of the spectrum, Ohio and New Hampshire are only represented by a single wedding each.
 
-In terms of average budget, New York and New Jersey take the cake; weddings in these states on the show cost nearly \$40,000, on average.
+In terms of average budget, New York and New Jersey take the cake; weddings in these states on the show cost nearly $40,000, on average.
 
 For more detailed budget information, here's a histogram with budget information for every wedding on the show. You can also look at breakdowns of the number of guests at the wedding, budget per guest, bride's age, spouse's age, and the age gap between the two people getting married.
 
