fixing weird errors in voting story

--- a/src/pages/articles/strength-in-numbers.mdx
+++ b/src/pages/articles/strength-in-numbers.mdx
@@ -217,7 +217,7 @@ In addition to reporting on the number of poll workers and the difficulty in
 finding them, some jurisdictions also report statistics on the age distribution
 of poll workers. Here's a breakdown of those age groups by state and year: 
 
-<VotingPollWorkerAge caption="Figure 3: hi" />
+VotingPollWorkerAge GOES HERE
 
 In the aggregate, distribution of poll worker ages has been relatively steady across elections.
 
