--- a/src/pages/articles/strength-in-numbers.mdx
+++ b/src/pages/articles/strength-in-numbers.mdx
@@ -14,6 +14,7 @@ import {
   VotingTable
 } from "story_components";
 import * as d from "data/strength-in-numbers.js";
+import COLORS from "utils/styles";
 
 Over the past few years, I've read two books that have really left a lasting
 impression. One of them is called [The Merchant of Doubt: How a Handful of Scientists Obscured the Truth on Issues from Tobacco Smoke to Global Warming](https://www.amazon.com/Merchants-Doubt-Handful-Scientists-Obscured/dp/1608193942).
@@ -129,6 +130,7 @@ For more on the percentages, here are histograms highlighting the distrubtion of
 <VotingBarChart
   caption="Figure 3: Bar graph of registration and turnout by state."
   dataCleaner={d.dataCleanerForFirstBarGraph}
+  selectData={[d.lineOptionsForVoters.slice(-2)]}
 />
 
 ---
@@ -223,11 +225,15 @@ What do you notice by exploring these graphs? Here are some things I noticed:
 
 In addition to reporting on the number of poll workers and the difficulty in
 finding them, some jurisdictions also report statistics on the age distribution
-of poll workers. Here's a breakdown of those age groups by state and year:
+of poll workers. Below is a breakdown of those age groups by state and year.
+(Note that no states reported this information for 2008.)
 
-VotingPollWorkerAge GOES HERE
+<VotingPollWorkerAge caption="Figure 6: Pie chart of poll worker ages, by state and year." />
 
-In the aggregate, distribution of poll worker ages has been relatively steady across elections.
+In the aggregate, distribution of poll worker ages has been relatively steady
+across elections. In terms of youth participation, some states do better than
+others. California leads the pack with poll workers under the age of 18; more
+than 20% of reported workers for the 2012 election were minors.
 
 ---
 
@@ -238,13 +244,17 @@ One other dimension that we haven't considered yet is the political leanings of 
 -- why looking at election results can be problematic (personality driven, not every congressional district has option from both parties)
 -- here's data on political party affiliation
 -- visualization to show influence of party affiliation --- scatterplot? histogram??
--- histogram: bar color = affiliation, slide for year, bins adjust. maybe this is best.
+-- histogram: bar color = affiliation, slide for year, bins adjust. maybe this is best
 
-- https://news.gallup.com/poll/114016/state-states-political-party-affiliation.aspx (2008)
-- https://news.gallup.com/poll/146234/number-solidly-democratic-states-cut-half.aspx (2010)
-- https://news.gallup.com/poll/160175/blue-states-outnumber-red-states.aspx (2012)
-- https://news.gallup.com/poll/181475/massachusetts-maryland-democratic-states.aspx (2014)
-- https://news.gallup.com/poll/203117/gop-maintains-edge-state-party-affiliation-2016.aspx (2016)
+<VotingBarChart
+  caption="Figure 7: Exploring the influence of party affiliation on other statistics."
+  dataCleaner={d.dataCleanerForSecondBarGraph}
+  selectData={[d.selectDataForSecondBarGraph]}
+  colorRange={[COLORS.DARK_BLUE, COLORS.RED]}
+  colorDomain={[-50, 50]}
+  colorAccessor={d => d.rep_percent - d.dem_percent}
+/>
+
 
 ---
 
@@ -256,3 +266,4 @@ Sources:
 - [Voter Turnout Data](http://www.electproject.org/home/voter-turnout/voter-turnout-data), by the United States Elections Project
 - [The Merchants of Doubt](https://www.amazon.com/Merchants-Doubt-Handful-Scientists-Obscured/dp/1608193942), by Naomi Oreskes and Erik Conway.
 - [Give Us the Ballot](https://www.amazon.com/Give-Us-Ballot-Struggle-America/dp/1250094720), by Ari Berman.
+- Gallup surveys on political affiliation by state: [2016](https://news.gallup.com/poll/203117/gop-maintains-edge-state-party-affiliation-2016.aspx), [2014](https://news.gallup.com/poll/181475/massachusetts-maryland-democratic-states.aspx), [2012](https://news.gallup.com/poll/160175/blue-states-outnumber-red-states.aspx), [2010](https://news.gallup.com/poll/146234/number-solidly-democratic-states-cut-half.aspx), [2008](https://news.gallup.com/poll/114016/state-states-political-party-affiliation.aspx)
