typo in four weddings

--- a/src/pages/articles/four-weddings.mdx
+++ b/src/pages/articles/four-weddings.mdx
@@ -55,7 +55,7 @@ For more detailed budget information, here's a histogram with budget information
 
 The chart should speak for itself, but here are some additional highlights:
 
-- Overall, weddings on the show had an average budget of **\$31,058**. They had a median budget of **\$25,000**.
+- Overall, weddings on the show had an average budget of **$31,058**. They had a median budget of **$25,000**.
 - The average guest count was nearly **154**. The median guest count was **145**.
 - The average bride age was **29.2**. The average age of the spouse was **31.6**.
 - The average gap between the age of the spouse and the age of the bride was **2.4** years.
