adding ManhattanPaths component

--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -6,7 +6,7 @@ caption: "distance caption"
 featured_image_caption: "distance image caption"
 ---
 
-import { DistanceExplorer } from "story_components";
+import { DistanceExplorer, ManhattanPaths } from "story_components";
 
 When was the last time you went more than a day without thinking about distance?
 It might seem like a strange question. But notions of distance, whether literal
@@ -78,8 +78,7 @@ counter-clockwise.
 Here's a demonstration that let's you explore how many different paths will
 connect two points when using the manhattan distance.
 
-DEMONSTRATION
-Drag points, slider to highlight different numbers of paths
+<ManhattanPaths />
 
 For another fun bit of trivia, let's explore what circles look like in this
 geometry. You can define a circle to simply be the set of points that are a
