--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@
 - search for stories
 - fewer decimal places for orchard-game.js
 - story title page: make nav color customizable
+- add ci
 
 LOW PRIORITY
 - get more heat map data (mayyybeeeee)
