--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -9,7 +9,8 @@ featured_image_caption: "distance image caption"
 import {
   DistanceExplorer,
   ManhattanCircle,
-  ManhattanPaths
+  ManhattanPaths,
+  StringDistanceExplorer
 } from "story_components";
 
 When was the last time you went more than a day without thinking about distance?
@@ -181,8 +182,7 @@ letters out of order.
 Here's a demonstration for you to play around with these three notions of word
 distance. What would a circle look like in this geometry?
 
-DEMONSTRATION
-Type a word in two inputs, see the various distance values
+<StringDistanceExplorer />
 
 ---
 
