--- a/src/pages/articles/keeping-distances.mdx
+++ b/src/pages/articles/keeping-distances.mdx
@@ -8,6 +8,7 @@ featured_image_caption: "distance image caption"
 
 import {
   DistanceExplorer,
+  FunctionDistanceExplorer,
   ManhattanCircle,
   ManhattanPaths,
   StringDistanceExplorer
@@ -182,7 +183,7 @@ letters out of order.
 Here's a demonstration for you to play around with these three notions of word
 distance. What would a circle look like in this geometry?
 
-<StringDistanceExplorer />
+<StringDistanceExplorer caption="Figure 4: Type words into the boxes to compare three different distance measures." />
 
 ---
 
@@ -213,8 +214,7 @@ this distance is 0, the functions are the same.
 Here's a demonstration where you can adjust some simple functions and see both
 of these distances change.
 
-DEMONSTRATION
-draggable functions
+<FunctionDistanceExplorer />
 
 A question for you to ponder: if the largest difference distance is small, what
 (if anything) can you say about the area distance? If the area distance is
